--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,3 +77,164 @@ Dark Green - #1f2d2e
 Light Green - #234534
 Orange - #ED6B55
  */
+[type="checkbox"] {
+    opacity: 0;
+    position: absolute;
+}
+
+.feedbackForm label {
+    line-height: 40px;
+    padding-right: 100px;
+    margin:15px 0;
+    position: relative;
+}
+
+.feedbackForm label::before {
+    content: '';
+    width: 80px;
+    height:40px;
+    background-color: #1f2d2e;
+    position: absolute;
+    /* to the right side of our label */
+    right:0;
+    border-radius: 20px;
+}
+
+.feedbackForm label::after {
+    content: '';
+    width: 30px;
+    height:30px;
+    top:5px;
+    right:45px;
+    background-color: white;
+    position: absolute;
+    border-radius: 50%;
+}
+
+[type="checkbox"]:checked + label::after {
+    right:5px;
+}
+
+
+[type="checkbox"]:checked + label::before {
+    background-color: #ED6B55;
+}
+
+.feedbackForm [type="checkbox"]:focus + label {
+    border: 1px dashed black;
+}
+
+.tabs {
+    background-color: #234534;
+}
+
+.tabs .content {
+    background-color: white;
+}
+
+.tabs label {
+    margin: 0 auto;
+    text-align: center;
+    display: block;
+    position: relative;
+}
+
+/* targets the child div of .content */
+.content > div  {
+    display: none;
+    padding: 20px;
+}
+
+/* ~: div with .firstPlant which is a child of content any sibling after the spider-tab that is checked 
+only will work on content that is after the checked tab */
+#spider-tab:checked ~ .content .firstPlant,
+#snake-tab:checked ~ .content .secondPlant,
+#philo-tab:checked ~ .content .thirdPlant
+{
+    display: block;
+}
+
+.tabs input[type="radio"]  {
+    opacity: 0;
+    position: absolute;
+}
+
+.tabs label:hover {
+    color:white;
+    cursor:pointer;
+}
+
+/* +: adjacent selector - something that is directly following whatever is checked */
+.tabs input:checked + label {
+    color:white;
+}
+
+.tabs input:focus + label {
+    text-decoration: underline;
+}
+
+.tabs label .fa-angle-double-down {
+    color:#EB6856;
+    position: absolute;
+    right:50px;
+    top:20px;
+    display:none;
+} 
+
+
+.tabs input:checked + label .fa-angle-double-down {
+    display:block;
+}
+
+/* mobile phones */
+@media (min-width: 480px) {
+
+    .feedbackForm {
+        width: 75%;
+    }
+
+    .tabs label {
+        display:inline-block;
+    }
+    
+    .tabs label .fa-angle-double-down {
+        right: 0px;
+    }
+    
+    /* padding around all divs in the content div */
+    .content > div {
+        padding: 25px;
+    }
+}
+
+/* Landscape phone to portrait tablet */
+@media (min-width: 768px) {
+    .feedbackForm {
+        width: 65%;
+    }
+
+    #spider-tab:checked ~ .content .firstPlant,
+    #snake-tab:checked ~ .content .secondPlant,
+    #philo-tab:checked ~ .content .thirdPlant {
+        display: flex;
+    }
+
+    .imgContainer {
+        width: 50%;
+        margin-right: 25px;
+    }
+    .plantDescription {
+        width: 50%;
+    }
+
+    .plantDescription p {
+        margin: 0 0 25px 0;
+    }
+}
+
+/* small laptops to desktops */
+@media (min-width: 940px) {
+    .feedbackForm {
+        width: 50%;
+    }
+}
